--- a/style.css
+++ b/style.css
@@ -120,7 +120,6 @@ h3 {
   margin-left: 1.25em;
   height: 35rem;
   width: 35rem;
-  background-color: blue;
 }
 
 .tribute-img img {
@@ -227,4 +226,71 @@ footer img:hover {
   position: relative;
   vertical-align: middle;
   width: 100%;
+}
+
+/* Mobile Landscape Screen Sizes */
+
+@media (max-width: 480px) {
+  main {
+    margin-bottom: 70rem;
+    width: 100%;
+  }
+
+  header {
+    width: 100%;
+    margin-top: -6rem;
+    margin-bottom: 13rem;
+  }
+
+  header h1 {
+    margin-bottom: -2rem;
+  }
+
+  .title-h2 {
+    font-size: 1.8rem;
+    
+  }
+  .paragraph {
+    font-size: 1rem;
+    margin-top: -2rem;
+  }
+
+  .row {
+    display: block;
+    width: 90%;
+  }
+
+  .img-header {
+    position: relative;
+  }
+
+  .about h2 {
+    margin: 0 auto;
+  }
+
+ 
+  .row.text {
+    margin-bottom: 50rem;
+  }
+
+  .about,
+  .tribute-class {
+    width: 100%;
+  }
+
+  .tribute-img {
+    width: 85%;
+    margin-bottom: 4rem;
+  }
+
+  .image-overlay {
+    opacity: 1;
+  }
+
+  .image-title {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+
+
 }
